# fedavg

./: .gitignore  README.md  pyproject.toml  requirements.txt  workspace.ipynb
fedavg/: model.py  node.py  utils.py
tests/: test_node.py
